Removed redundant information from REST API fixed bugs comments refactoring